# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xhngfUVEw8KRc1bJ3St4OaslsLHeaE5CFQwOuOUX4MoA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1xxbM45M-qpuaJg3LqBKSz-4x1w3uGpXEDwtZef9hnEk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1vF6fb4YRxszl1J7AjwRGl4YmPJgs9U1OOhtBUtGa1QE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xxBwsTaTeSBYU9KUzPouU3XAGveImJdzKWblup7f4Tdw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1-i9cA2VytiiQoKLO-_BMW_CTC-Py9K8dQMnVpA7ZkSs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1bN2l7wXpEaAAKylGuXjcO_hzeXzeLR4gCPb0GYenbvU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1uQLfMwKbx9Xr_ZtHOtrmZiv_TxJXYserXmPr-jxbt4k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2FSTmCc2TcVa1_ACZRBE3WsL9xv4zPmB_y4QCB4SXHG0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2L32IODPoVgF9MEaMt9QtrNk9s7u7X5ncndhH8HtMICg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2SWjGrQ-_alunK_LMplW1I5-XeVrxgaouJL_7gkTjEjc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2hb_fdAFlEpzo15rduknwABEsUdWzIN4ZT-x9eAHINtY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2lMaAftw1Stt9IT2zfS6KnHj0_IAQQlmqLl7UDnRmclo=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1LyqYLF744y99WGZ3yvKalVqnG4Z_wLcCDrbC85-_Zvw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1YgCXYBVsMMu10nqT-o7e3fFVdLT2voacKxcxv9NNJDQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1cw2USLMsitSydvpVf-DBu62as1EXZEhNyJFI48bdlG8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1lrjZ3fkVeLnHbV2mMcTND-pmy2ihdAIiJSvR2RuuLqc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1pYHNOUF5udnUfs84EXuZsPnwr3UnIFbcJD1LFAP0K1I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1wxGILIXiGc_D7n8b1rQdmgMbRbVDeEjtAgKS3N5akSg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1q2KFQiYvhwN8gwalp06N3QpgNZxlhr9EmVqmmT4NTVc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64RIKq72UM3rmje3qSHnh0x3fvybdum5dkRrh9sUFPB1g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64fD1kkzM9nMFQ96DncnnKOnexa2GbYdEaxcoWGTM7ifs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x16CqU20Ggb8ETyB-A0TchfU41qO6qYejJed8245BnCBo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1IY33-ZpgyL0ZOz19SEOy_8BvoMoe1mgo5non7uGLb_I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1LAmnEV_u-Yqc1-L4Mg4hTQtPXpkj4inXKVDpBWEds-c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2bZUdhpKl7IhS3LOeiFqGvf6BldnLHJq0twN9JDd_SMY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2hxNVcopCTk-199gnmF4gemT5w6e67ICoa1jkIlta6bo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3stIvqoSprHh7nuxqjhFGPWcDBAQHdx_2t8RtipZumZw=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI326XSYNzyLDByULz8kv0G1CJA6o_vmiGoonr1rFRtp55s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32RQ7no4IgVOLePfUqvgXx8uiONDyZXzEjQF0e2ICumB8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32fJdWDE_JeP-kl0_EQZ1IbyvQEhXpiU9FWkYqit79kGw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32HnmQz6tzqDv0uHEyxLWZ8X6EDmvnQyqAbUbpkuYo0Fc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xBka0m23qiU4NiGDJrTzRPnAvrYTYJdBJDidPX2bPIV8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xRBaT8nwgCRAK0uCpGCIM68CYt0JI2xJ2yqt46-r95wM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ELxP20Z_ZsnR0-VDbA9RisK4JEtDqTkBpt-5YoyRdjc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1GUBXX6h2fhmD2Zi7_ew1BaHkKn2MwvviC1DjmQdv2KQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JcmniTXIA8oI-tRBeamH5MBJQmdWMBJ7kSxsZnpeNuY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1KX0FT3VUkHiQ6x11yT8t2FjzT2orJySQQOy0qSOhKYs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1KfcsBWTX9A1691cBCDHhCELlhqWwonYPgfydsv2i5cs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1T-mzsPcfeuY5IbGl_1s65U6F4idUS23joF7cjJOg_jI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1YMNzJPtB-s4rWtuJwwyvo4B0OZ9IggMQIuA_gmwBWyc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1dJCA1IG1CthYR_ZszIVZ1u7w8-qeeYJ_QSecmUdov0I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3HiOEppq2E8Fjs2XfxK_97POA2OvDscbUENZ8X_4r8uk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3RQLRt8-9mtMH9mZuUCOl2Kwq773gES-dksOMwc4maYo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4dqLi2gAZ_4fYNTStw05_fD5H9uzN1EppP8Rxoit-Uyc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4kU5lqebYTJa0vMz_zSCwH1AifXO6DnI92fWQFRW5L84=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16pa2VxoVS_GyesNy08LCG8ipapuFTmXqm49sJH2fZWlI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16fVc5qTEnfucieEXdTdB2VwqvjXG7UPRYYDELR1QCEoM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16HXIPORtQC_XwgtA80Emyy-JAIkDK5tLLi1TETsNokxA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16ObYdGKZKlWBCo8ThEZs_-HKHmImfnVziglTc3B9Qwrs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16hhSuLfeoFkxeEv5Sz9g2Y-E7AA7iM1A5XnqjeFtJdBc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x162OFd6zIiRE-jqY_AL-FiFi5c1Idoog3Jdb9RKZNgt6Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16od5O26VD-bzeC4iQEXpgl5rSvWCcFRv5wNt3GAZy1WM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16gZF8bBDrfJdiuGCaEXxvSMsStXIzk99N9In_VqqEKgI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16vqub0V9qFRHBkVyaM86uvrEXwhkR51rsgtIQPpGXqKY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16kO4nsLR1qd108IG44QNtE7hmpB-qZFMevqcT9CWCFY0=',
      'err': 0,
    }),
  ])
# ---
